luci-theme-bootstrap, luci-theme-openwrt-2020: fix dynlist overflows
Fixes: #3795

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -494,6 +494,8 @@ select,
 	border-radius: 3px;
 	position: relative;
 	pointer-events: none;
+	overflow: hidden;
+	word-break: break-all;
 }
 
 .cbi-dynlist > .item::after {
