--- a/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
+++ b/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
@@ -1114,13 +1114,14 @@ textarea {
 .cbi-dynlist > .item {
 	box-shadow: 0 0 2px var(--main-dark-color);
 	margin: .3em 0;
-	padding: .15em .2em;
+	padding: .15em 2em .15em .2em;
 	border-radius: .25em;
 	position: relative;
 	overflow: hidden;
 	transition: box-shadow .25s ease-in-out;
 	pointer-events: none;
 	flex: 1 1 100%;
+	word-break: break-all;
 }
 
 .cbi-dynlist > .item::after {
